# resfinder

./: .gitignore  CHANGELOG.md  DEV_SETUP.md  Dockerfile_no_dbs  LICENSE  MANIFEST.in  Pipfile  README.md  bitbucket-pipelines.yml  dockerfile  dockerfile_EFSA_2022  make_conda_linux.py  pyproject.toml  pytest.ini  run_resfinder.py  setup.cfg  setup.py
.github/workflow/: linux-manual.yml
cge/: config.md  config.py  pointfinder.py  resfinder.py  standardize_results.py
cge/output/: gene_result.py  orderedset.py  phenotype_result.py  seq_variation_result.py  std_results.py
cge/phenotype2genotype/: feature.py  isolate.py  res_profile.py
envs/: osx-build.yml
scripts/: fparseJSONtoRESULTS.py  install_resfinder.sh
src/resfinder/: __init__.py  __main__.py  amr_abbreviations.md  environment_variables.md  run_resfinder.py  species_abbreviations.md
src/resfinder/cge/: blast_manager.py  config.py  kma_manager.py  pointfinder.py  resfinder.py  standardize_results.py
src/resfinder/cge/output/: gene_result.py  orderedset.py  phenotype_result.py  result_handler.py  seq_variation_result.py  std_results.py
src/resfinder/cge/phenotype2genotype/: feature.py  isolate.py  res_profile.py  res_sumtable.py
tests/: config.md  test_config.md
tests/data/: env_var_test_fail.md  test_isolate_10.fa  test_isolate_11.fa  test_isolate_11_1.fq  test_isolate_11_2.fq  test_isolate_12.fa
tests/resfinder/: test_run_resfinder.md
tests/resfinder/cge/: test_config.md  test_pointfinder.md
tests/resfinder/cge/output/: phenotype_result.md  test_gene_result.md  test_phenotype_result.md  test_result_handler.md  test_seq_variation_result.md  test_std_results.md
tests/resfinder/cge/phenotype2genotype/: isolate.md  test_antibiotics.md  test_isolate.md
