[project]
name = "resfinder"
dynamic = ["version"]
description = """ResFinder identifies acquired genes and/or finds chromosomal /
                 mutations mediating antimicrobial resistance in total or /
                 partial DNA sequence of bacteria."""
authors = [
    {name = "Center for Genomic Epidemiology", email = "food-cgehelp@dtu.dk"},
]
dependencies = [
    "cgelib>=0.7.3",
    "cgecore==1.5.6",
    "tabulate>=0.8.9",
    "pandas>=1.4.2",
    "biopython>=1.79"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]

[tool.pdm]
version = {from = "src/resfinder/__init__.py"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]

[tool.pdm.scripts]
test = "python -m pytest tests/"
resfinder = "python -m resfinder"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
