[metadata]
name = resfinder
version = 0.3.0
author = Center for Genomic Epidemiology
author_email = food-cgehelp@dtu.dk
description = Library of modules used throughout the tools developed and maintained by the Center for Genomic Epidemiology (CGE).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/genomicepidemiology/cge_package
project_urls =
    Bug Tracker = https://bitbucket.org/genomicepidemiology/cge_package/issues
    CGE website = http://genomicepidemiology.org
    CGE webtools = http://genomicepidemiology.org/services
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    python-dateutil
    GitPython

[options.packages.find]
where = src
